# dux-ai-node

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-node.yml
.tmp/: tray-config.json
.tmp/browser-profile/default/: Local State
.tmp/browser-profile/default/Default/: Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  TransportSecurity  Web Data
.tmp/browser-profile/default/Default/Cache/Cache_Data/: 416d9dd4579cb287_0  4da432f739cd0dfc_0  f4d1766ee2dd8c7a_0
.tmp/browser-profile/default/Default/Cache/Cache_Data/index-dir/: the-real-index
.tmp/browser-profile/default/Default/Code Cache/js/index-dir/: the-real-index
.tmp/browser-profile/default/Default/Code Cache/wasm/index-dir/: the-real-index
.tmp/browser-profile/default/Default/DawnGraphiteCache/: index
.tmp/browser-profile/default/Default/DawnWebGPUCache/: index
.tmp/browser-profile/default/Default/Extension Rules/: LOG
.tmp/browser-profile/default/Default/Extension Scripts/: LOG
.tmp/browser-profile/default/Default/Extension State/: LOG
.tmp/browser-profile/default/Default/GPUCache/: index
.tmp/browser-profile/default/Default/Local Storage/leveldb/: LOG
.tmp/browser-profile/default/Default/Session Storage/: LOG
.tmp/browser-profile/default/Default/Sessions/: Session_13417878309459216  Tabs_13417878309743234
.tmp/browser-profile/default/Default/Shared Dictionary/cache/index-dir/: the-real-index
.tmp/browser-profile/default/Default/Site Characteristics Database/: LOG
.tmp/browser-profile/default/Default/Sync Data/LevelDB/: LOG
.tmp/browser-profile/default/Default/shared_proto_db/: LOG
.tmp/browser-profile/default/Default/shared_proto_db/metadata/: LOG
.tmp/browser-profile/default/GrShaderCache/: index
.tmp/browser-profile/default/GraphiteDawnCache/: index
.tmp/browser-profile/default/ShaderCache/: index
apps/node-daemon/: Cargo.toml
apps/node-daemon/src/: main.rs
apps/node-tray/: Cargo.toml  build.rs
apps/node-tray/src/: main.rs
assets/: icon.icns  icon.png.base64
crates/browser/: Cargo.toml
crates/browser/examples/: smoke_action.rs
crates/browser/src/: lib.rs
crates/browser/src/backend/: chromiumoxide.rs  enigo_fallback.rs  mod.rs
crates/browser/src/platform_helper/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  logging.rs  protocol.rs  runtime.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
deploy/systemd/: dux-ai-node.service
docs/: browser-runtime-migration.md
helpers/macos-ax-helper/: Package.swift  README.md
helpers/macos-ax-helper/Sources/: main.swift
helpers/windows-uia-helper/: README.md  dux-node-windows-uia-helper.ps1
scripts/: build-linux.sh  build-macos-app.sh  build-windows.ps1  install-linux.sh  install-systemd-user.sh  smoke-test-node.sh  uninstall-linux.sh
web/settings/: README.md  app.css
web/settings/templates/: about.html  permissions.html  settings.html
