[package]
name = "dux-ai-node"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
image.workspace = true
minijinja.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tao = "0.31"
tray-icon = "0.19"
url.workspace = true
wry = "0.45"
dux-ai-node-core = { path = "../../crates/core" }
dux-ai-node-browser = { path = "../../crates/browser" }
dux-ai-node-platform = { path = "../../crates/platform" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

[build-dependencies]
winresource = "0.1"
