[package]
name = "dux-ai-node-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
once_cell = "1"
base64 = "0.22"
